Package: R.matlab
=================

Version: 2.2.2 [2014-01-28]
o Added option 'R.matlab::readMat/v4/textMatrixCollapse' controlling
  whether MAT v4 text matrixes are collapsed into strings by row
 ("byrow"; default), by column ("bycolumn") or not at all ("none").


Version: 2.2.1 [2014-01-28]
o ROBUSTNESS: Now Matlab$startServer() asserts that all MATLAB server
  files that are indeed successfully copied, iff missing.
o CLEANUP: open() for Matlab no longer generates warnings on
  "socketConnection(...) ... cannot be opened", which occured while
  waiting/polling for the Matlab server to startup and respond.


Version: 2.2.0 [2014-01-21]
o DOCUMENTATION: Updated list of Matlab versions for which the
  package has been confirmed to work with.
o BUG FIX: The MatlabServer.m script would incorrectly consider
  Matlab v8 and above as Matlab v6.  Thanks to Frank Stephen at NREL
  for reporting on this and providing a patch.
o Bumped up package dependencies.


Version: 2.1.0 [2013-11-29]
o CLEANUP: Now package only imports R.oo (no longer attaches it).
  Also, the package now imports R.utils (used to suggest and attach
  it when needed).  These updates make the package more "silent".
o CLEANUP: Dropped obsolete autoload():s.
o Now the 'R.matlab' Package object is also available when the
  package is only loaded (but not attached).
o ROBUSTNESS: Added package system test asserting that readMat()
  can be called without attaching the package.


Version: 2.0.7 [2013-11-28]
o Now the 'INTERNAL ERROR' message readMat() throws on failed
  decompression also includes the first and last bytes of the data
  block that it tried to decompress.  This will further help
  troubleshooting.


Version: 2.0.6 [2013-09-20]
o ROBUSTNESS: Forgot to import R.methodsS3::appendVarArgs().


Version: 2.0.5 [2013-09-16]
o ROBUSTNESS: Added one explicit import from the 'utils' package.


Version: 2.0.4 [2013-09-11]
o CONSISTENCY:  Added argument 'drop' to readMat() to control how